[FIX-12] Fix overflow error

--- a/src/components/Skydaysctf.css
+++ b/src/components/Skydaysctf.css
@@ -5,13 +5,12 @@
   align-items: center;
   gap: 3rem;
   scroll-margin-top: 100px;
-  width: 80%;
 }
 
 .ctf > div {
   background-color: rgba(20, 40, 80, 0.2);
-  width: 100vw;
   text-align: center;
+  align-self: stretch;
   padding: 3rem;
 }
 .ctf > div > h2 {
@@ -31,6 +30,7 @@
   justify-content: center;
   align-items: start;
   gap: 3rem;
+  width: 80%;
 }
 .ctf-about > p {
   color: #a7cbd3;
